adds integration test setup for circleci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,18 @@ executors:
       auth:
         username: $DOCKER_LOGIN
         password: $DOCKER_ACCESSTOKEN
+  dotnet-core-sdk-and-postgres-service:
+    docker:
+    - image: mcr.microsoft.com/dotnet/sdk:6.0
+      auth:
+        username: $DOCKER_LOGIN
+        password: $DOCKER_ACCESSTOKEN
+    - image: kartoza/postgis:12.4 # For integration testing
+      auth:
+        username: $DOCKER_LOGIN
+        password: $DOCKER_ACCESSTOKEN
+      environment:
+        name: "postgis"
   docker-publisher:
     environment:
       IMAGE_NAME: openftth/tile-data-extract
@@ -37,6 +49,25 @@ jobs:
       - run:
           name: Build
           command: dotnet build -c Release
+
+  test-app:
+    executor: dotnet-core-sdk-and-postgres-service
+    steps:
+      - checkout
+      - run:
+          name: install dockerize
+          command: |
+            wget https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSION/dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz
+            tar -C /usr/local/bin -xzvf dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz
+            rm dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz
+          environment:
+            DOCKERIZE_VERSION: v0.3.0
+      - run:
+          name: Wait for db
+          command: dockerize -wait tcp://localhost:5432 -timeout 1m
+      - run:
+          name: Test
+          command: dotnet test
 
   build-docker-image:
     executor: docker-publisher
@@ -107,6 +138,11 @@ workflows:
           filters:
             tags:
               only: /.*/
+      - test-app:
+          context: docker
+          filters:
+            tags:
+              only: /.*/
       - build-docker-image:
           context: docker
           filters:
@@ -118,6 +154,7 @@ workflows:
           context: docker
           requires:
            - build-app
+           - test-app
            - build-docker-image
           filters:
             tags:
