--- a/test/TileDataExtract.Tests/TileDataExtract.Tests.csproj
+++ b/test/TileDataExtract.Tests/TileDataExtract.Tests.csproj
@@ -27,6 +27,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="Data/route_network.geojson" CopyToOutputDirectory="PreserveNewest" />
+    <None Update="Data/route_node.json" CopyToOutputDirectory="PreserveNewest" />
     <None Update="Scripts/setup_db.sql" CopyToOutputDirectory="PreserveNewest" />
   </ItemGroup>
 
