--- a/test/TileDataExtract.Tests/TileDataExtract.Tests.csproj
+++ b/test/TileDataExtract.Tests/TileDataExtract.Tests.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="6.6.0" />
+    <PackageReference Include="FluentAssertions.Json" Version="6.1.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
     <PackageReference Include="System.Linq.Async" Version="6.0.1" />
     <PackageReference Include="xunit" Version="2.4.1" />
@@ -27,6 +28,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="Data/route_network.geojson" CopyToOutputDirectory="PreserveNewest" />
+    <None Update="Data/route_node.json" CopyToOutputDirectory="PreserveNewest" />
     <None Update="Scripts/setup_db.sql" CopyToOutputDirectory="PreserveNewest" />
   </ItemGroup>
 
