--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,7 +34,7 @@ executors:
       GIT_USER_NAME: "dax-bot"
       GIT_USER_EMAIL: "admin@dax.dk"
       GIT_CLONE_REPO: "git@github.com:DAXGRID/dax-charts.git"
-      SSH_FINGERPRINT: "9f:70:7c:51:f8:61:00:67:90:4f:09:bd:98:5a:10:44"
+      SSH_FINGERPRINT: "af:f5:82:97:19:23:88:ca:50:16:de:f9:41:79:b9:18"
     docker:
     - image: alpine/git
 
