updates the SSH_FINGERPRINT user key

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,7 +34,7 @@ executors:
       GIT_USER_NAME: "dax-bot"
       GIT_USER_EMAIL: "admin@dax.dk"
       GIT_CLONE_REPO: "git@github.com:DAXGRID/dax-charts.git"
-      SSH_FINGERPRINT: "af:f5:82:97:19:23:88:ca:50:16:de:f9:41:79:b9:18"
+      SSH_FINGERPRINT: "SHA256:Er+8QWUA8K59u1+iklMtldRvFd/yF6PhsYfV8+5dYZI"
     docker:
     - image: alpine/git
 
